added friend finder

--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/topGear.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Friend Finder App</h5>
+                                <p class="card-text">Node/Express app to find your best friend match.</p>
+                                <a href="https://top-gear-friend-finder.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/Friend-Finder" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
