--- a/index.html
+++ b/index.html
@@ -210,6 +210,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/whiskey.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Whiskey United</h5>
+                                <p class="card-text">Whiskey tracking app featuring handlebars, MySQL, and more.</p>
+                                <a href="https://whiskey-united.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://djwasing.github.io/WhiskeyUnited/" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
