--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 <h5 class="card-title">Whiskey United</h5>
                                 <p class="card-text">Whiskey tracking app featuring handlebars, MySQL, and more.</p>
                                 <a href="https://whiskey-united.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
-                                <a href="https://djwasing.github.io/WhiskeyUnited/" target="blank" class="btn btn-lg">GitHub</a>
+                                <a href="https://github.com/djwasing/WhiskeyUnited" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
