--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
 
                     <div class="col-md-4">
                         <div class="card card1" style="width: 18rem;">
-                            <img class="card-img-top" id="policeImg" src="assets/images/trainPic.jpg" alt="Card image cap">
+                            <img class="card-img-top" id="policeImg" src="assets/images/brew.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Train Schedule App</h5>
-                                <p class="card-text">Live database train schedule app using moment.js and Firebase.</p>
-                                <a href="https://djwasing.github.io/TrainSchedule/" target="blank" class="btn btn-lg">Open</a>
-                                <a href="https://github.com/djwasing/TrainSchedule" target="blank" class="btn btn-lg">GitHub</a>
+                                <h5 class="card-title">Happy Hour App</h5>
+                                <p class="card-text">Full-Stack App for weekley specials at your favorite establishments</p>
+                                <!-- <a href="#" target="blank" class="btn btn-lg">Work In Progress</a> -->
+                                <a href="https://github.com/jstone074/Project-2" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
-
+                    
                     <div class="col-md-4">
                         <div class="card card1" style="width: 18rem;">
                             <img class="card-img-top" src="assets/images/office.png" alt="Card image cap">
@@ -219,6 +219,18 @@
                                 <p class="card-text">Whiskey tracking app featuring handlebars, MySQL, and more.</p>
                                 <a href="https://whiskey-united.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
                                 <a href="https://github.com/djwasing/WhiskeyUnited" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/trainPic.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Train Schedule App</h5>
+                                <p class="card-text">Live database train schedule app using moment.js and Firebase.</p>
+                                <a href="https://djwasing.github.io/TrainSchedule/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/TrainSchedule" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
