--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <img class="card-img-top" id="policeImg" src="assets/images/brew.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Happy Hour</h5>
-                                <p class="card-text">Full-Stack App for weekley specials at your favorite establishments</p>
+                                <p class="card-text">Full-Stack App for weekly specials at your favorite establishments</p>
                                 <!-- <a href="#" target="blank" class="btn btn-lg">Work In Progress</a> -->
                                 <a href="https://github.com/jstone074/Project-2" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
