--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Happy Hour</h5>
                                 <p class="card-text">Full-Stack App for weekly specials at your favorite establishments</p>
-                                <!-- <a href="#" target="blank" class="btn btn-lg">Work In Progress</a> -->
+                                <a href="https://app-happy-hour.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
                                 <a href="https://github.com/jstone074/Project-2" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
