--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <p>
                     <h5>Initial Blog Post / MongoDB</h5>
                     <h5 class="date">3/27/19</h5>
-                    This area of my site is going to be dedicated to blog posts. The blogs will be centered around my learning of new coding languages and technologies. I thought this would be a good way to review information and explore a bit deeper into the tech I’m currently studying. I’ve found I feel more confident if I can explain the language in my own terms to someone else, so this blog is selfishly a tool for my own learning. 
+                    This area of my site is going to be dedicated to blog posts. The blogs will be centered around my learning of new coding languages and technologies. I thought this would be a good way to review information and explore a bit deeper into the tech I’m currently studying. I’ve found I feel more confident if I can explain the language in my own terms to someone else, so this blog is (selfishly) a tool for my own learning. 
                     <br>
                     <br>
                     I started the KU Coding Bootcamp in November, 2018 and have learned so much about JavaScript, CSS, Bootstrap, jQuery, MySQL, Node.js, and so many others. Obviously learning all this new information has come with challenges. There have been several times I’ve had to spend hours looking over code to find bugs, or reaching out to tutors or teachers for assistance. I think knowing how to properly utilize your resources is just as important as knowing the languages. 
