--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@
             <h2 class="title">Blog</h2>
             <div id="blog1" class="overflow-auto">
                 <p>
-                    <h5>Initial Blog Post / MongoDB</h5>
-                    <h5 class="date">3/27/19</h5>
+                    <h5>Initial Blog Post / MongoDB - 3/27/19</h5>
                     This area of my site is going to be dedicated to blog posts. The blogs will be centered around my learning of new coding languages and technologies. I thought this would be a good way to review information and explore a bit deeper into the tech I’m currently studying. I’ve found I feel more confident if I can explain the language in my own terms to someone else, so this blog is (selfishly) a tool for my own learning. 
                     <br>
                     <br>
