--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <img class="card-img-top" id="policeImg" src="assets/images/scoutLogo.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Scout Ride Share</h5>
-                                <p class="card-text">App compares Uber and Lyft prices using ajax calls and jQuery.</p>
+                                <p class="card-text">App compares real-time Uber and Lyft prices using ajax calls and jQuery.</p>
                                 <a href="https://scout-ride-share.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
                                 <a href="https://github.com/djwasing/Scout-Ride-Share" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
