--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
 </head>
@@ -40,8 +41,8 @@
     </div>
     <div class="wrapper">
         <div class="row banner" id="banner">
-            <h1 class="bannerText">W A S I N G E R / D O N</h1>
-            <h3 id="bannerSub">Full-Stack Web Developer</h3>
+            <h1 class="bannerText display-3 animated fadeInDown slow">W A S I N G E R / D O N</h1>
+            <h3 id="bannerSub" class="display-3 animated fadeIn slow">Full-Stack Web Developer</h3>
         </div>
         <div id="infoArea">
             <img class="photo" src="assets/images/edit1.jpeg"/>
