--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="wrapper">
         <div class="row banner" id="banner">
             <h1 class="bannerText display-3 animated fadeInDown slow">W A S I N G E R / D O N</h1>
-            <h3 id="bannerSub" class="display-3 animated fadeIn slow">Full-Stack Web Developer</h3>
+            <h3 id="bannerSub" class="display-3 animated fadeIn slower">Full-Stack Web Developer</h3>
         </div>
         <div id="infoArea">
             <img class="photo" src="assets/images/edit1.jpeg"/>
