--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
 
                     <div class="col-md-4">
                         <div class="card card2" style="width: 18rem;">
-                            <img class="card-img-top" id="dogImg" src="assets/images/dogPhoto.jpg" alt="Card image cap">
+                            <img class="card-img-top" id="dogImg" src="assets/images/motoTire.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Hangman Game (Node.js)</h5>
-                                <p class="card-text">Node.js word guessing app with a dog theme.</p>
-                                <!-- <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a> -->
-                                <a href="https://github.com/djwasing/Node-Word-Guess" target="blank" class="btn btn-lg">GitHub</a>
+                                <h5 class="card-title">React.js Memory Game</h5>
+                                <p class="card-text">Memory game built using React framework</p>
+                                <a href="https://guarded-escarpment-73743.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/ClickGame" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -251,7 +251,19 @@
                             </div>
                         </div>
                     </div>
-            </div>
+
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="dogImg" src="assets/images/dogPhoto.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Hangman Game (Node.js)</h5>
+                                <p class="card-text">Node.js word guessing app with a dog theme.</p>
+                                <!-- <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a> -->
+                                <a href="https://github.com/djwasing/Node-Word-Guess" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
 
         <div class="blogArea" id="blogArea">
