--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">React.js Memory Game</h5>
                                 <p class="card-text">Memory game built using React framework</p>
-                                <a href="https://guarded-escarpment-73743.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://moto-click-game.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
                                 <a href="https://github.com/djwasing/ClickGame" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
