--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 
                     <div class="col-md-4">
                         <div class="card card1" style="width: 18rem;">
-                            <img class="card-img-top" id="policeImg" src="assets/images/brew.png" alt="Card image cap">
+                            <img class="card-img-top" id="policeImg" src="assets/images/faviconAtlas.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Happy Hour</h5>
-                                <p class="card-text">Full-Stack App for weekly specials at your favorite establishments</p>
-                                <a href="https://app-happy-hour.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
-                                <a href="https://github.com/jstone074/Project-2" target="blank" class="btn btn-lg">GitHub</a>
+                                <h5 class="card-title">Atlas</h5>
+                                <p class="card-text">Full-Stack MERN App for secure information storage</p>
+                                <a href="https://atlas-secure-info.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/HaydnNeese/Project-3" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -240,6 +240,18 @@
                 </div>
 
                 <div class="row">
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/brew.png" alt="Card image cap">
+                            <div class="card-body">
+                                    <h5 class="card-title">Happy Hour</h5>
+                                    <p class="card-text">Full-Stack App for weekly specials at your favorite establishments</p>
+                                    <a href="https://app-happy-hour.herokuapp.com/" target="blank" class="btn btn-lg">Open</a>
+                                    <a href="https://github.com/jstone074/Project-2" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-md-4">
                         <div class="card card2" style="width: 18rem;">
                             <img class="card-img-top" id="policeImg" src="assets/images/motoDon.jpg" alt="Card image cap">
